# terraform-aylas-servers

./: .gitignore  .terraform.lock.hcl  LICENSE  Management commands cheatsheet.md  README.md  ansible.cfg  aylas-one.ansible.yml  main.tf  pyproject.toml  requirements.txt  requirements.yml  shell.nix  terrashell.sh  tofushell.sh  variables.tf
.github/: renovate.json
.github/workflows/: static-analysis.yml
data/: cloud-config
roles/common/files/: htoprc
roles/common/tasks/: main.yml
roles/common_post/handlers/: main.yml
roles/common_post/tasks/: main.yml
roles/duplicity_backup/tasks/: main.yml
roles/duplicity_backup/templates/: backctl  duplicity_config.json
roles/purpur_mc_server/handlers/: main.yml
roles/purpur_mc_server/meta/: main.yml
roles/purpur_mc_server/tasks/: main.yml
roles/purpur_mc_server/templates/: server_controller.sh  server_ipc_vars
roles/purpur_mc_server/templates/apparmor/: purpur-mc-server
roles/purpur_mc_server/templates/systemd/: backup-and-update-purpur-mc-server.service  backup-and-update-purpur-mc-server.timer  purpur-mc-server.service  (+2 more)
roles/rustic_backup/files/: backctl
roles/rustic_backup/handlers/: main.yml
roles/rustic_backup/tasks/: main.yml
roles/rustic_backup/templates/: backctl
roles/ssh_server/files/: ssh_banner.txt
roles/ssh_server/handlers/: main.yml
roles/ssh_server/tasks/: main.yml
roles/storage_quotas/files/: rootfsquota_initramfs_hook  rootfsquota_initramfs_script
roles/storage_quotas/handlers/: main.yml
roles/storage_quotas/tasks/: main.yml
roles/tmux_kiosk/tasks/: main.yml
(+6 files in other folders)
