[tool.poetry]
name = "terraform-aylas-servers"
version = "0.1.0"
description = "Terraform and Ansible artifacts to manage the Aylas Community server infrastructure configuration"
authors = ["Alejandro González <me@alegon.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^11.0.0"
oci-cli = "^3.31.0"
ansible-lint = { version = "^25.0.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
